fixed carousel spacing

--- a/styles/sass/partials/_carousel.scss
+++ b/styles/sass/partials/_carousel.scss
@@ -4,13 +4,25 @@
   position: relative;
   height: 500px;
   width: 100%;
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;  
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    object-position: center; 
+    filter: grayscale(1) contrast(1.8) brightness(0.6);
+    mix-blend-mode: multiply;
+    position: relative;
+  }
 }
 
 .ratFacts {
   color: white;
   z-index: 2;
-  font-size: 5rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -21,17 +33,11 @@
   padding-left: 100px;
   padding-right: 100px;
   padding-top: 20%;
+  font-family: $bodyText; 
+  font-size: 4rem;
+
 }
 
-.carousel img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
-  object-position: center; 
-  filter: grayscale(1) contrast(1.8) brightness(0.6);
-  mix-blend-mode: multiply;
-  position: relative;
-}
 
 .trackContainer {
   height: 100%;
@@ -76,7 +82,6 @@
   position: absolute;
 }
 
-
 .carouselButtonLeft {
   left: 0;
   transform: rotate(180deg);
@@ -93,7 +98,6 @@
   display: flex;
   justify-content: center; 
   padding: 10px 0; 
- 
 }
 
 .carouselIndicator {
